--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.0",
+    "firebase": "^9.9.2",
     "moment": "^2.29.4",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading": "^2.0.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
