--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.0",
     "firebase": "^9.9.2",
+    "fuse.js": "^6.6.2",
     "moment": "^2.29.4",
     "next": "12.2.4",
     "react": "18.2.0",
