--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "firebase": "^9.9.2",
     "fuse.js": "^6.6.2",
     "moment": "^2.29.4",
-    "next": "12.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "eslint-config-next": "^13.1.1",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
