--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.0",
     "@mui/styled-engine-sc": "^5.10.0",
+    "email-validator": "^2.0.4",
     "firebase": "^9.9.2",
     "fuse.js": "^6.6.2",
     "moment": "^2.29.4",
